Implement a Saga process using Rebus

--- a/SagaPatternWithRebus/appsettings.json
+++ b/SagaPatternWithRebus/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "RebusRabbitMQ": "amqp://guest:guest@localhost/%2f",
+    "RebusPostgreSQL": "Host=localhost;Port=5432;Username=postgres;Password=postgrespw;Database=postgres;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
