--- a/SagaPatternWithRebus/SagaPatternWithRebus.csproj
+++ b/SagaPatternWithRebus/SagaPatternWithRebus.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,7 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Rebus.PostgreSql" Version="8.1.0" />
     <PackageReference Include="Rebus.RabbitMq" Version="8.0.0" />
-    <PackageReference Include="Rebus.ServiceProvider" Version="9.0.0" />
+    <PackageReference Include="Rebus.ServiceProvider" Version="9.1.0" />
   </ItemGroup>
 
 </Project>
